[package]
name = "hokulea-example-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-client.workspace = true
hokulea-compute-proof.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true
hokulea-zkvm-verification.workspace = true

# General
anyhow.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

kona-client.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-megaevm.workspace = true

alloy-rpc-client.workspace = true

canoe-provider.workspace = true
canoe-sp1-cc-host = { workspace = true, optional = true }
canoe-steel-apps = { workspace = true, optional = true }
canoe-steel-verifier = { workspace = true, optional = true }
canoe-verifier-address-fetcher.workspace = true
canoe-verifier.workspace = true

sp1-sdk = {workspace = true}

[features]
sp1-cc = ["canoe-sp1-cc-host"]
steel = ["canoe-steel-apps", "canoe-steel-verifier"]

